написаны все тесты для AdsController. Один тест не проходит. Написаны javadoc